# ceo-to-mets

./: .gitignore  ARCHITECTURE_COMPARISON.md  DEMO_METS_README.md  DEPENDENCY_INJECTION_ANALYSIS.md  LOADER_ARCHITECTURE.md  PROTOCOL_EXAMPLE.md  README.md  WORD_SEGMENTATION_SUMMARY.md  create_demo_mets.py  pyproject.toml  test_mods_quick.py
alto-backup/: 0001-Add-ALTO-generation-to-demo-METS-script.patch  0002-Add-ALTO-XML-generator-for-PDF-layout-extraction.patch  0003-Fix-ALTO-XML-namespace-issues.patch
src/: clients.py  generate_mets.py
src/cli/: __init__.py  demo_mets.py  dp_to_pdf.py
src/generators/: __init__.py  alto_generator.py  generator.py  html_generator.py  mods_generator.py  pdf_generator.py  txt_generator.py
tests/: conftest.py  test_alto_doc.py  test_alto_generator.py  test_ceo_client.py  test_html_generator.py  test_mods_generator.py  test_pdf_generator.py  test_txt_generator.py
