[project]
name = "ceo-to-mets"
version = "0.1.0"
description = "Convert Daily Princetonian CEO API articles to METS/MODS packages"
authors = [
    {name = "Cliff Wulfman", email = "cwulfman@princeton.edu"},
]
dependencies = [
    "requests>=2.31.0",
    "weasyprint>=60.0",
    "lxml>=5.0.0",
    "jinja2>=3.1.0",
    "html2text>=2020.1.16",
    "pymupdf>=1.24.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
dp-to-pdf = "cli.dp_to_pdf:main"
demo-mets = "cli.demo_mets:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
package-dir = "src"


[tool.pdm.scripts]
test = "pytest"
test_verbose = "pytest -v"
cov = "pytest --cov=ceo_to_mets --cov-report=html"
cov_report = {shell = "python -m http.server -d htmlcov"}
lint = "ruff check"
typecheck = "mypy src"
dp-to-pdf = "python -m cli.dp_to_pdf"
demo-mets = "python -m cli.demo_mets"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=ceo_to_mets --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.3",
    "mypy>=1.15.0",
    "pytest-datadir>=1.8.0",
]
